adding some lines of code

--- a/classficationOfIris.ipynb
+++ b/classficationOfIris.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "# Read the data\n",
     "data = pd.read_csv('iris.data', header=None)\n",
-    "data.head()\n"
+    "data.head()"
    ]
   },
   {
